# http_client_udr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_RU.md  http_client_udr.sln
projects/http_client_udr/: http_client_udr.vcxproj  http_client_udr.vcxproj.filters  release_pack-x64.bat  release_pack-x86.bat  write_build_no.bat
sql/: http_client_examples.sql  http_client_install.sql  http_client_uninstall.sql
src/: FBAutoPtr.h  UDR.h  http_client_udr.rc  libmain.cpp  udr_build_no.h
